# cargo-clean-plus

./: Cargo.toml  README.md
src/: main.rs
